--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,25 @@
         android:theme="@style/Theme.GlucoMetric1"
         tools:targetApi="31">
         <activity
+            android:name=".SettingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".InfoActivity"
+            android:exported="false"
+            android:launchMode="singleInstance"/>
+        <activity
+            android:name=".MLModelsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DatasetActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MeasurementActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TakeSampleActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
