--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation group: 'com.opencsv', name: 'opencsv', version: '5.2'
 }
