--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation group: 'com.opencsv', name: 'opencsv', version: '5.2'
+    implementation 'com.android.volley:volley:1.2.1'
+
 }
