--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,7 @@
             android:exported="false" />
         <activity
             android:name=".BLEActivity"
-            android:exported="false"
-            android:launchMode="singleInstance"/>
+            android:exported="false" />
         <activity
             android:name=".MLModelsActivity"
             android:exported="false" />
