--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'no.nordicsemi.android:ble:2.6.0'
     implementation 'no.nordicsemi.android:ble-common:2.6.0'
+    implementation 'no.nordicsemi.android.support.v18:scanner:1.6.0'
 
 }
