--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -33,14 +36,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.GlucoMetric1"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
             android:name=".SettingActivity"
             android:exported="false" />
         <activity
             android:name=".BLEActivity"
             android:exported="false"
-            android:launchMode="singleInstance"/>
+            android:launchMode="singleInstance" />
         <activity
             android:name=".MLModelsActivity"
             android:exported="false" />
@@ -63,8 +66,15 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".bluetoothle.BLEGATTService" />
-        <service android:name=".bluetoothle.BLEScannerService" />
+
+<!--        Services-->
+        <service android:name=".bluetoothle.BLEGATTService"
+            android:enabled="true"
+            android:exported="true"/>
+
+        <service android:name=".bluetoothle.BLEScannerService"
+            android:enabled="true"
+            android:exported="true"/>
 
     </application>
 
