update: Design UI/UX

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,9 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -75,4 +78,6 @@ dependencies {
     androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    implementation 'com.airbnb.android:lottie:4.2.0'
+    implementation 'com.github.amrdeveloper:lottiedialog:1.0.0'
 }
